
ChangeLog
 [ + added, - removed, * changed ]
 * 28Aug2014 Fixed support for MPI-3 for MPI_Comm_spawn* calls
 * 27Aug2014 Upgraded version to 3.0 release. TA-DA!
 + 27Aug2014 Added support for MPI-3
 * 27Aug2014 Fixed configure/compilation bugs in the OpenSHMEM instrumentation.
 * 11Aug2014 Extensions to OpenCL instrumentation
 * 04Aug2014 Disable instrumetation of mpi_file_open in fortran
             Don't emit counters for a thread when flushing at the end if the
              calling thread is not the exec thread.
 + 31Jul2014 Added instrumentation support for OpenSHMEM
 * 14Jul2014 Fix permissions for files/directories in set-X
 * 11Jul2014 GOMP_parallel support (appeared in libgomp for GCC 4.9)
 * 24Jun2014 More fixes to OMPT support
 * 04Jun2014 Fixed bug in MPI statistics in burst mode: the resets were missing, and the timestamp of the events was wrong.
 + 04Jun2014 Preliminary OMPT support (tested with IBM OpenMP rte).
 + 14May2014 Added support for activating/pausing gremlins at run-time and options in the xml file to configure a repetitive pattern
 * 05May2014 Fixes for additional CUDA/Dimemas simulations
 * 25Apr2014 Changed the synchronization point for spawned processes from the start of the spawn call to the end.
 * 17Apr2014 MPI_Comm_spawn*: added time synchronization, fixed communications from child to parent.
             Online clustering: pass all counters to the clustering library, not only the common ones.
             Added online gremlins. 
             Added mock-up for standalone libraries and a binary loader.
             Removed debug messages.
 * 16Apr2014 Emit additional CUDA information for future Dimemas simulations
 * 14Apr2014 Bring libcudaompitrace to life
 * 03Apr2014 Fix improper access to MPI_STATUS_IGNORE in mpi_sendrecv, mpi_sendrecv_replace and MPI_Sendrecv_replace
             MFB 2.5 
               small fixes in documentation
               missing OpenCL bits